client-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      name: web
      labels:
        component: web


    spec:
      nodeSelector:
        mylabel: "true"
      containers:
        - name: client
          image: judrin/multi-client
          ports:
            - containerPort: 3000
  replicas: 3
